unpackaged/main/default/objects/Account/fields/Permission_to_Contact_Emergeny_Contact__c.field-meta.xml
<CustomField>
    <fullName>Permission_to_Contact_Emergeny_Contact__c</fullName>
    <description>A&amp;T requested that we specifically ask the client for permission to contact their listed emergency contact. This is normally implied during the collection, but our partner specifically requested for this clarification.</description>
    <inlineHelpText>Permission to contact emergency contact listed.</inlineHelpText>
    <label>Permission to Contact Emergeny Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>