unpackaged/main/default/objects/Account/fields/powerOfAttorneyType__c.field-meta.xml
<CustomField>
    <fullName>powerOfAttorneyType__c</fullName>
    <label>Power Of Attorney Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>type1</fullName>
            </value>
            <value>
                <fullName>Medical Directive</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Covers rights of estate</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>