unpackaged/main/default/objects/Account/fields/Recent_Matter__c.field-meta.xml
<CustomField>
    <fullName>Recent_Matter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Most recent matter that is tied to Party, this is used to pass document folders across all related objects.  TESTING</description>
    <label>Recent Matter</label>
    <referenceTo>litify_pm__Matter__c</referenceTo>
    <relationshipLabel>Parties</relationshipLabel>
    <relationshipName>Parties</relationshipName>
    <type>Lookup</type>
</CustomField>