unpackaged/main/default/objects/Account/fields/Relationship_To_Injured_Party__c.field-meta.xml
<CustomField>
    <fullName>Relationship_To_Injured_Party__c</fullName>
    <label>Relationship To Injured Party</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Wife</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>