unpackaged/main/default/objects/Account/fields/Release_Information_Permission_Check__c.field-meta.xml
<CustomField>
    <fullName>Release_Information_Permission_Check__c</fullName>
    <description>This field is used to inform us who we are allowed to share case information with. For example, an emergency contact, other law firms, etc.</description>
    <inlineHelpText>Who we are allowed to share Party&#39;s information with.</inlineHelpText>
    <label>Release Information Permission Check</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Emergency Contact</fullName>
            </value>
            <value>
                <fullName>Permission Denied</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>Emergency Contact &amp; Law Firm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>