unpackaged/main/default/objects/Account/fields/Roundup_Recent_Intake_Date__c.field-meta.xml
<CustomField>
    <fullName>Roundup_Recent_Intake_Date__c</fullName>
    <description>Last Intake date of creation. Used for dedupe process.</description>
    <label>Roundup Recent Intake Date</label>
    <type>DateTime</type>
</CustomField>