unpackaged/main/default/objects/Account/fields/Spouse_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_s_Name__c</fullName>
    <description>Used for situations when Spouse information is needed and directly tied to party, but not the case.  Mainly used in Signature situations.</description>
    <label>Spouse&#39;s Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>