unpackaged/main/default/objects/Account/fields/Street_1__c.field-meta.xml
<CustomField>
    <fullName>Street_1__c</fullName>
    <formula>IF(
CONTAINS(BillingStreet, MID($Setup.Formula_References__c.Line_Break__c ,3,1)),
LEFT(
BillingStreet,
FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), BillingStreet)
),
BillingStreet
)</formula>
    <label>Street 1</label>
    <type>Text</type>
</CustomField>