unpackaged/main/default/objects/Account/fields/Street_2__c.field-meta.xml
<CustomField>
    <fullName>Street_2__c</fullName>
    <formula>IF(
CONTAINS(BillingStreet, MID($Setup.Formula_References__c.Line_Break__c ,3,1)),
RIGHT(
BillingStreet,
(LEN(BillingStreet) - FIND(MID($Setup.Formula_References__c.Line_Break__c,3,1), BillingStreet))
),
&quot;&quot;
)</formula>
    <label>Street 2</label>
    <type>Text</type>
</CustomField>