unpackaged/main/default/objects/Account/fields/Talcum_Recent_Intake__c.field-meta.xml
<CustomField>
    <fullName>Talcum_Recent_Intake__c</fullName>
    <description>Takes todays date minus the &quot;Talcum Recent Intake Date&quot;. Checks if less than 14 days. Unchecks after. Used for Deduping process</description>
    <formula>TODAY() - DATEVALUE(Talcum_Recent_Intake_Date__c) &lt;= 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dedupe Filter. Checks when 14 days or less from last intake created in the Talcum tort.</inlineHelpText>
    <label>Talcum Recent Intake</label>
    <type>Checkbox</type>
</CustomField>