unpackaged/main/default/objects/Account/fields/Twilio_Message_Count__c.field-meta.xml
<CustomField>
    <fullName>Twilio_Message_Count__c</fullName>
    <description>DLRS Rollup count of Twilio Messages associated with Contacts associated with this Account</description>
    <inlineHelpText>DLRS Rollup count of Twilio Messages associated with Contacts associated with this Account</inlineHelpText>
    <label>Twilio Message Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>