unpackaged/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>LegacyId_Lead_ID__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>litify_pm__Email__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>litify_pm__Phone_Mobile__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All Parties</label>
</ListView>